--- a/src/notebooks/rabia_analysis.ipynb
+++ b/src/notebooks/rabia_analysis.ipynb
@@ -25,9 +25,29 @@
     "import pathlib\n",
     "\n",
     "parent_dir = pathlib.Path(\"~/zebrafish_rdsf/Rabia/SOST scales\").expanduser()\n",
-    "assert input_path.exists()\n",
+    "assert parent_dir.exists()\n",
     "\n",
     "scale_dirs = tuple(d for d in parent_dir.glob(\"*\") if not d.stem == \".DS_Store\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "64e4a3af",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tqdm.notebook import tqdm\n",
+    "\n",
+    "from scale_morphology.scales import read\n",
+    "\n",
+    "# Only take the first one for now\n",
+    "scale_dir = scale_dirs[0]\n",
+    "\n",
+    "scale_paths = scale_dir.glob(\"*.lif\")\n",
+    "path = next(scale_paths)\n",
+    "\n",
+    "all_images = read.read_2d_lif(path)"
    ]
   },
   {
