keep tmp changes but strip outputs so that i can move to working on my laptop...

--- a/src/notebooks/rabia_analysis.ipynb
+++ b/src/notebooks/rabia_analysis.ipynb
@@ -18,7 +18,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d2d077a",
+   "id": "1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,13 +38,50 @@
     "parent_dir = pathlib.Path(\"~/zebrafish_rdsf/Rabia/SOST scales\").expanduser()\n",
     "assert parent_dir.exists()\n",
     "\n",
-    "scale_dirs = tuple(d for d in parent_dir.glob(\"*\") if not d.stem == \".DS_Store\")"
+    "scale_dirs = tuple(d for d in parent_dir.glob(\"*\") if not d.stem in {\".DS_Store\", \"TIFs\"})"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64e4a3af",
+   "id": "3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from napari_bioformats import napari_get_reader\n",
+    "\n",
+    "scale_dir = scale_dirs[1]\n",
+    "scale_paths = scale_dir.glob(\"*.lif\")\n",
+    "path = str(next(scale_paths))\n",
+    "\n",
+    "reader = napari_get_reader(path)\n",
+    "\n",
+    "layer_data = reader(path)\n",
+    "arrays = [ld[0] for ld in layer_data]\n",
+    "print([a.shape for a in arrays])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "a, = arrays\n",
+    "a = np.moveaxis(a, 0, -1)\n",
+    "print(a.shape)\n",
+    "\n",
+    "plt.imshow(a, cmap=\"Reds\")\n",
+    "plt.axis(\"off\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,17 +90,47 @@
     "from scale_morphology.scales import read\n",
     "\n",
     "# Only take the first one for now\n",
-    "scale_dir = scale_dirs[0]\n",
+    "scale_dir = scale_dirs[1]\n",
+    "print(scale_dir)\n",
     "\n",
     "scale_paths = scale_dir.glob(\"*.lif\")\n",
     "path = next(scale_paths)\n",
+    "print(path)\n",
     "\n",
     "all_images = read.read_2d_lif(path)"
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "def factor_int(n):\n",
+    "    val = math.ceil(math.sqrt(n))\n",
+    "    val2 = int(n/val)\n",
+    "    while val2 * val != float(n):\n",
+    "        val -= 1\n",
+    "        val2 = int(n/val)\n",
+    "    return val, val2\n",
+    "\n",
+    "n_figs = factor_int(len(all_images))\n",
+    "\n",
+    "fig, axes = plt.subplots(*n_figs, figsize=[3*x for x in n_figs])\n",
+    "for axis, img in zip(axes.flat, all_images):\n",
+    "    axis.imshow(img)\n",
+    "    axis.set_axis_off()\n",
+    "\n",
+    "fig.tight_layout()"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "d651271e",
+   "id": "7",
    "metadata": {},
    "source": [
     "Segment them\n",
