--- a/src/notebooks/rabia_analysis.ipynb
+++ b/src/notebooks/rabia_analysis.ipynb
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1",
+   "id": "d6cfc20f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2",
+   "id": "1d2d077a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,66 +44,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3",
+   "id": "7e648093",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from napari_bioformats import napari_get_reader\n",
-    "\n",
-    "scale_dir = scale_dirs[1]\n",
-    "scale_paths = scale_dir.glob(\"*.lif\")\n",
-    "path = str(next(scale_paths))\n",
-    "\n",
-    "reader = napari_get_reader(path)\n",
-    "\n",
-    "layer_data = reader(path)\n",
-    "arrays = [ld[0] for ld in layer_data]\n",
-    "print([a.shape for a in arrays])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "a, = arrays\n",
-    "a = np.moveaxis(a, 0, -1)\n",
-    "print(a.shape)\n",
-    "\n",
-    "plt.imshow(a, cmap=\"Reds\")\n",
-    "plt.axis(\"off\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from tqdm.notebook import tqdm\n",
-    "\n",
     "from scale_morphology.scales import read\n",
     "\n",
-    "# Only take the first one for now\n",
     "scale_dir = scale_dirs[1]\n",
-    "print(scale_dir)\n",
-    "\n",
     "scale_paths = scale_dir.glob(\"*.lif\")\n",
     "path = next(scale_paths)\n",
     "print(path)\n",
     "\n",
-    "all_images = read.read_2d_lif(path)"
+    "images = read.read_lif(path)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6",
+   "id": "0f7c8219",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,11 +76,12 @@
     "        val2 = int(n/val)\n",
     "    return val, val2\n",
     "\n",
-    "n_figs = factor_int(len(all_images))\n",
+    "n_figs = factor_int(len(images))\n",
+    "print(n_figs)\n",
     "\n",
     "fig, axes = plt.subplots(*n_figs, figsize=[3*x for x in n_figs])\n",
-    "for axis, img in zip(axes.flat, all_images):\n",
-    "    axis.imshow(img)\n",
+    "for axis, img in zip(axes.flat, images):\n",
+    "    axis.imshow(img[1])\n",
     "    axis.set_axis_off()\n",
     "\n",
     "fig.tight_layout()"
@@ -130,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7",
+   "id": "d651271e",
    "metadata": {},
    "source": [
     "Segment them\n",
@@ -196,12 +155,6 @@
     "[^2](#cite_ref-2): N. MacLeod, 'PalaeoMath 101 part 25: the centre cannot hold II: Elliptic fourier\n",
     "analysis.' Palaeontol. Assoc. Newslett. 79, 29–43, 2012 http://go.palass.org/65a."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "210bb117",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
