--- a/src/notebooks/rabia_analysis.ipynb
+++ b/src/notebooks/rabia_analysis.ipynb
@@ -55,7 +55,7 @@
     "path = next(scale_paths)\n",
     "print(path)\n",
     "\n",
-    "images = read.read_lif(path)"
+    "names, images = zip(*read.read_lif(path))"
    ]
   },
   {
@@ -66,22 +66,26 @@
    "outputs": [],
    "source": [
     "import math\n",
+    "import textwrap\n",
     "import matplotlib.pyplot as plt\n",
+    "\n",
     "\n",
     "def factor_int(n):\n",
     "    val = math.ceil(math.sqrt(n))\n",
-    "    val2 = int(n/val)\n",
+    "    val2 = int(n / val)\n",
     "    while val2 * val != float(n):\n",
     "        val -= 1\n",
-    "        val2 = int(n/val)\n",
+    "        val2 = int(n / val)\n",
     "    return val, val2\n",
+    "\n",
     "\n",
     "n_figs = factor_int(len(images))\n",
     "print(n_figs)\n",
     "\n",
-    "fig, axes = plt.subplots(*n_figs, figsize=[3*x for x in n_figs])\n",
-    "for axis, img in zip(axes.flat, images):\n",
-    "    axis.imshow(img[1])\n",
+    "fig, axes = plt.subplots(*n_figs, figsize=[3 * x for x in n_figs])\n",
+    "for axis, img, name in zip(axes.flat, images, names):\n",
+    "    axis.imshow(img)\n",
+    "    axis.set_title(\"\\n\".join(textwrap.wrap(name, width=10)))\n",
     "    axis.set_axis_off()\n",
     "\n",
     "fig.tight_layout()"
