--- a/src/notebooks/rabia_analysis.ipynb
+++ b/src/notebooks/rabia_analysis.ipynb
@@ -82,10 +82,11 @@
     "n_figs = factor_int(len(images))\n",
     "print(n_figs)\n",
     "\n",
+    "titles = [\"\\n\".join(textwrap.wrap(name, width=10)) for name in names]\n",
     "fig, axes = plt.subplots(*n_figs, figsize=[3 * x for x in n_figs])\n",
-    "for axis, img, name in zip(axes.flat, images, names):\n",
+    "for axis, img, title in zip(axes.flat, images, titles):\n",
     "    axis.imshow(img)\n",
-    "    axis.set_title(\"\\n\".join(textwrap.wrap(name, width=10)))\n",
+    "    axis.set_title(title)\n",
     "    axis.set_axis_off()\n",
     "\n",
     "fig.tight_layout()"
@@ -100,6 +101,25 @@
     "----\n",
     "Now that we have read the scales into memory, we want to threshold them out.\n",
     "There aren't that many, so we could probably just do this by hand, but I don't have a mouse right now so I'm going to try to do it using computers."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7a0868d2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "Histogram\n",
+    "\"\"\"\n",
+    "import numpy as np\n",
+    "from tqdm.notebook import tqdm\n",
+    "\n",
+    "fig, axes = plt.subplots(*n_figs, figsize=[5*n_figs[0], 3*n_figs[1]])\n",
+    "for axis, img, title in zip(axes.flat, images, tqdm(titles)):\n",
+    "    axis.hist(img.ravel(), bins=np.linspace(0, 255, 100))\n",
+    "    axis.set_title(title)"
    ]
   },
   {
