plot hists + thresholds

--- a/src/notebooks/rabia_analysis.ipynb
+++ b/src/notebooks/rabia_analysis.ipynb
@@ -123,6 +123,55 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "64229f20",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "Otsu threshold\n",
+    "\n",
+    "\"\"\"\n",
+    "from skimage.color import rgb2gray\n",
+    "from skimage.filters import threshold_otsu\n",
+    "\n",
+    "greyscale = [rgb2gray(img) for img in tqdm(images)]\n",
+    "thresholds = [threshold_otsu(img) for img in tqdm(greyscale)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "103839f0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, axes = plt.subplots(*n_figs, figsize=[5 * n_figs[0], 3 * n_figs[1]])\n",
+    "for axis, img, title, threshold in zip(axes.flat, greyscale, tqdm(titles), thresholds):\n",
+    "    axis.hist(img.ravel(), bins=np.linspace(0, 1, 100))\n",
+    "    axis.axvline(threshold, color=\"r\")\n",
+    "    axis.set_title(title)\n",
+    "\n",
+    "plt.show(fig)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "987b81cd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, axes = plt.subplots(*n_figs, figsize=[5 * n_figs[0], 3 * n_figs[1]])\n",
+    "for axis, img, title in zip(axes.flat, thresholded, tqdm(titles)):\n",
+    "    axis.imshow(img, cmap=\"binary\")\n",
+    "    axis.set_title(title)\n",
+    "\n",
+    "plt.show(fig)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "eb5796e8",
    "metadata": {},
