--- a/src/notebooks/rabia_analysis.ipynb
+++ b/src/notebooks/rabia_analysis.ipynb
@@ -106,25 +106,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a0868d2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"\"\"\n",
-    "Histogram\n",
-    "\"\"\"\n",
-    "import numpy as np\n",
-    "from tqdm.notebook import tqdm\n",
-    "\n",
-    "fig, axes = plt.subplots(*n_figs, figsize=[5*n_figs[0], 3*n_figs[1]])\n",
-    "for axis, img, title in zip(axes.flat, images, tqdm(titles)):\n",
-    "    axis.hist(img.ravel(), bins=np.linspace(0, 255, 100))\n",
-    "    axis.set_title(title)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "64229f20",
    "metadata": {},
    "outputs": [],
@@ -133,6 +114,8 @@
     "Otsu threshold\n",
     "\n",
     "\"\"\"\n",
+    "\n",
+    "from tqdm.notebook import tqdm\n",
     "from skimage.color import rgb2gray\n",
     "from skimage.filters import threshold_otsu\n",
     "\n",
@@ -147,13 +130,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, axes = plt.subplots(*n_figs, figsize=[5 * n_figs[0], 3 * n_figs[1]])\n",
+    "import numpy as np\n",
+    "\n",
+    "fig, axes = plt.subplots(\n",
+    "    *n_figs, figsize=[5 * n_figs[0], 3 * n_figs[1]], sharex=True, sharey=True\n",
+    ")\n",
     "for axis, img, title, threshold in zip(axes.flat, greyscale, tqdm(titles), thresholds):\n",
     "    axis.hist(img.ravel(), bins=np.linspace(0, 1, 100))\n",
     "    axis.axvline(threshold, color=\"r\")\n",
     "    axis.set_title(title)\n",
+    "    axis.set_ylim(0, 400000)\n",
     "\n",
     "plt.show(fig)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9d350377",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "thresholded = [i > t for i, t in zip(greyscale, thresholds)]"
    ]
   },
   {
@@ -167,8 +165,21 @@
     "for axis, img, title in zip(axes.flat, thresholded, tqdm(titles)):\n",
     "    axis.imshow(img, cmap=\"binary\")\n",
     "    axis.set_title(title)\n",
+    "    axis.axis(\"off\")\n",
     "\n",
     "plt.show(fig)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f186f718",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from skimage.morphology import binary_closing, area_closing\n",
+    "\n",
+    "area_closed = [area_closing(img) for img in thresholded]\n"
    ]
   },
   {
@@ -209,14 +220,6 @@
     "\n",
     "possibly up to some factors of $2\\pi$"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "19a77459",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
