--- a/src/notebooks/rabia_analysis.ipynb
+++ b/src/notebooks/rabia_analysis.ipynb
@@ -165,9 +165,7 @@
     "for axis, img, title in zip(axes.flat, thresholded, tqdm(titles)):\n",
     "    axis.imshow(img, cmap=\"binary\")\n",
     "    axis.set_title(title)\n",
-    "    axis.axis(\"off\")\n",
-    "\n",
-    "plt.show(fig)"
+    "    axis.axis(\"off\")"
    ]
   },
   {
@@ -177,9 +175,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from skimage.morphology import binary_closing, area_closing\n",
+    "from scipy import ndimage\n",
     "\n",
-    "area_closed = [area_closing(img) for img in thresholded]\n"
+    "\n",
+    "def largest_connected_component(binary_array):\n",
+    "    \"\"\"\n",
+    "    Return the largest connected component of a binary array, as a binary array,\n",
+    "    using a 26-connectivity.\n",
+    "\n",
+    "    :param binary_array: Binary array.\n",
+    "    :returns: Largest connected component.\n",
+    "\n",
+    "    \"\"\"\n",
+    "    labelled, _ = ndimage.label(binary_array, np.ones((3, 3)))\n",
+    "\n",
+    "    # Find the size of each component, ignoring the background\n",
+    "    sizes = np.bincount(labelled.ravel())\n",
+    "    sizes[0] = 0\n",
+    "\n",
+    "    retval = labelled == np.argmax(sizes)\n",
+    "    print(f\"{np.sum(binary_array) - np.sum(retval)}\", end=\" \")\n",
+    "    return retval\n",
+    "\n",
+    "\n",
+    "single_obj = [largest_connected_component(img) for img in tqdm(thresholded)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6a53c764",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, axes = plt.subplots(*n_figs, figsize=[5 * n_figs[0], 3 * n_figs[1]])\n",
+    "for axis, img, title in zip(axes.flat, single_obj, tqdm(titles)):\n",
+    "    axis.imshow(img, cmap=\"binary\")\n",
+    "    axis.set_title(title)\n",
+    "    axis.axis(\"off\")"
    ]
   },
   {
