--- a/src/notebooks/rabia_analysis.ipynb
+++ b/src/notebooks/rabia_analysis.ipynb
@@ -29,6 +29,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "3a321b69",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "1d2d077a",
    "metadata": {},
    "outputs": [],
@@ -79,17 +89,22 @@
     "    return val, val2\n",
     "\n",
     "\n",
-    "n_figs = factor_int(len(images))\n",
-    "print(n_figs)\n",
+    "def plot_imgs(images, **plot_kw):\n",
+    "    global titles\n",
+    "\n",
+    "    n_figs = factor_int(len(images))\n",
+    "\n",
+    "    fig, axes = plt.subplots(*n_figs, figsize=[3 * x for x in n_figs])\n",
+    "    for axis, img, title in zip(axes.flat, images, titles):\n",
+    "        axis.imshow(img, **plot_kw)\n",
+    "        axis.set_title(title)\n",
+    "        axis.set_axis_off()\n",
+    "    fig.tight_layout()\n",
+    "\n",
     "\n",
     "titles = [\"\\n\".join(textwrap.wrap(name, width=10)) for name in names]\n",
-    "fig, axes = plt.subplots(*n_figs, figsize=[3 * x for x in n_figs])\n",
-    "for axis, img, title in zip(axes.flat, images, titles):\n",
-    "    axis.imshow(img)\n",
-    "    axis.set_title(title)\n",
-    "    axis.set_axis_off()\n",
-    "\n",
-    "fig.tight_layout()"
+    "if plot:\n",
+    "    plot_imgs(images)"
    ]
   },
   {
@@ -132,16 +147,18 @@
    "source": [
     "import numpy as np\n",
     "\n",
-    "fig, axes = plt.subplots(\n",
-    "    *n_figs, figsize=[5 * n_figs[0], 3 * n_figs[1]], sharex=True, sharey=True\n",
-    ")\n",
-    "for axis, img, title, threshold in zip(axes.flat, greyscale, tqdm(titles), thresholds):\n",
-    "    axis.hist(img.ravel(), bins=np.linspace(0, 1, 100))\n",
-    "    axis.axvline(threshold, color=\"r\")\n",
-    "    axis.set_title(title)\n",
-    "    axis.set_ylim(0, 400000)\n",
-    "\n",
-    "plt.show(fig)"
+    "if plot:\n",
+    "    n_figs = factor_int(len(greyscale))\n",
+    "    fig, axes = plt.subplots(\n",
+    "        *n_figs, figsize=[5 * n_figs[0], 3 * n_figs[1]], sharex=True, sharey=True\n",
+    "    )\n",
+    "    for axis, img, title, threshold in zip(axes.flat, greyscale, tqdm(titles), thresholds):\n",
+    "        axis.hist(img.ravel(), bins=np.linspace(0, 1, 100))\n",
+    "        axis.axvline(threshold, color=\"r\")\n",
+    "        axis.set_title(title)\n",
+    "        axis.set_ylim(0, 400000)\n",
+    "    \n",
+    "    plt.show(fig)"
    ]
   },
   {
@@ -151,7 +168,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "thresholded = [i > t for i, t in zip(greyscale, thresholds)]"
+    "thresholded = [i < t for i, t in zip(greyscale, thresholds)]"
    ]
   },
   {
@@ -161,11 +178,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, axes = plt.subplots(*n_figs, figsize=[5 * n_figs[0], 3 * n_figs[1]])\n",
-    "for axis, img, title in zip(axes.flat, thresholded, tqdm(titles)):\n",
-    "    axis.imshow(img, cmap=\"binary\")\n",
-    "    axis.set_title(title)\n",
-    "    axis.axis(\"off\")"
+    "if plot:\n",
+    "    plot_imgs(thresholded, cmap=\"binary\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d312691b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "Remove objects touching the border\n",
+    "\"\"\"\n",
+    "\n",
+    "from skimage.segmentation import clear_border\n",
+    "\n",
+    "cleared_border = [clear_border(t) for t in tqdm(thresholded)]\n",
+    "\n",
+    "if plot:\n",
+    "    plot_imgs(cleared_border, cmap=\"binary\")"
    ]
   },
   {
@@ -189,7 +222,7 @@
     "    \"\"\"\n",
     "    labelled, _ = ndimage.label(binary_array, np.ones((3, 3)))\n",
     "\n",
-    "    # Find the size of each component, ignoring the background\n",
+    "    # Find the size of each component\n",
     "    sizes = np.bincount(labelled.ravel())\n",
     "    sizes[0] = 0\n",
     "\n",
@@ -198,7 +231,7 @@
     "    return retval\n",
     "\n",
     "\n",
-    "single_obj = [largest_connected_component(img) for img in tqdm(thresholded)]"
+    "single_obj = [largest_connected_component(img) for img in tqdm(cleared_border)]"
    ]
   },
   {
@@ -208,11 +241,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, axes = plt.subplots(*n_figs, figsize=[5 * n_figs[0], 3 * n_figs[1]])\n",
-    "for axis, img, title in zip(axes.flat, single_obj, tqdm(titles)):\n",
-    "    axis.imshow(img, cmap=\"binary\")\n",
-    "    axis.set_title(title)\n",
-    "    axis.axis(\"off\")"
+    "if plot:\n",
+    "    plot_imgs(single_obj, cmap=\"binary\")"
    ]
   },
   {
