fcn to do binary opening

--- a/src/notebooks/rabia_analysis.ipynb
+++ b/src/notebooks/rabia_analysis.ipynb
@@ -77,6 +77,7 @@
    "source": [
     "import math\n",
     "import textwrap\n",
+    "from tqdm.notebook import tqdm\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "\n",
@@ -95,7 +96,7 @@
     "    n_figs = factor_int(len(images))\n",
     "\n",
     "    fig, axes = plt.subplots(*n_figs, figsize=[3 * x for x in n_figs])\n",
-    "    for axis, img, title in zip(axes.flat, images, titles):\n",
+    "    for axis, img, title in zip(axes.flat, tqdm(images), titles):\n",
     "        axis.imshow(img, **plot_kw)\n",
     "        axis.set_title(title)\n",
     "        axis.set_axis_off()\n",
@@ -129,8 +130,6 @@
     "Otsu threshold\n",
     "\n",
     "\"\"\"\n",
-    "\n",
-    "from tqdm.notebook import tqdm\n",
     "from skimage.color import rgb2gray\n",
     "from skimage.filters import threshold_otsu\n",
     "\n",
@@ -179,7 +178,7 @@
    "outputs": [],
    "source": [
     "if plot:\n",
-    "    plot_imgs(thresholded, cmap=\"binary\")"
+    "    plot_imgs(thresholded, **plot_kw)"
    ]
   },
   {
@@ -198,7 +197,37 @@
     "cleared_border = [clear_border(t) for t in tqdm(thresholded)]\n",
     "\n",
     "if plot:\n",
-    "    plot_imgs(cleared_border, cmap=\"binary\")"
+    "    plot_imgs(cleared_border, **plot_kw)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dda485a8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "Binary opening to remove small objects\n",
+    "\"\"\"\n",
+    "\n",
+    "from skimage.morphology import binary_opening, disk, erosion, reconstruction\n",
+    "\n",
+    "\n",
+    "def open_by_reconstruction(mask, radius):\n",
+    "    selem = disk(radius)\n",
+    "    seed = erosion(mask, selem)\n",
+    "    opened = reconstruction(\n",
+    "        seed.astype(np.uint8), mask.astype(np.uint8), method=\"dilation\"\n",
+    "    )\n",
+    "    return opened.astype(bool)\n",
+    "\n",
+    "\n",
+    "opened = [open_by_reconstruction(i, 5) for i in tqdm(cleared_border)]\n",
+    "\n",
+    "plot_kw = {\"cmap\": \"binary\"}\n",
+    "if plot:\n",
+    "    plot_imgs(opened, **plot_kw)"
    ]
   },
   {
@@ -242,7 +271,7 @@
    "outputs": [],
    "source": [
     "if plot:\n",
-    "    plot_imgs(single_obj, cmap=\"binary\")"
+    "    plot_imgs(single_obj, **plot_kw)"
    ]
   },
   {
