--- a/src/notebooks/rabia_analysis.ipynb
+++ b/src/notebooks/rabia_analysis.ipynb
@@ -96,7 +96,7 @@
     "    n_figs = factor_int(len(images))\n",
     "\n",
     "    fig, axes = plt.subplots(*n_figs, figsize=[3 * x for x in n_figs])\n",
-    "    for axis, img, title in zip(axes.flat, tqdm(images), titles):\n",
+    "    for axis, img, title in zip(tqdm(axes.flat), images, titles):\n",
     "        axis.imshow(img, **plot_kw)\n",
     "        axis.set_title(title)\n",
     "        axis.set_axis_off()\n",
@@ -177,6 +177,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "plot_kw = {\"cmap\": \"binary\"}\n",
     "if plot:\n",
     "    plot_imgs(thresholded, **plot_kw)"
    ]
@@ -223,9 +224,8 @@
     "    return opened.astype(bool)\n",
     "\n",
     "\n",
-    "opened = [open_by_reconstruction(i, 5) for i in tqdm(cleared_border)]\n",
+    "opened = [open_by_reconstruction(i, 20) for i in tqdm(cleared_border)]\n",
     "\n",
-    "plot_kw = {\"cmap\": \"binary\"}\n",
     "if plot:\n",
     "    plot_imgs(opened, **plot_kw)"
    ]
@@ -260,7 +260,7 @@
     "    return retval\n",
     "\n",
     "\n",
-    "single_obj = [largest_connected_component(img) for img in tqdm(cleared_border)]"
+    "single_obj = [largest_connected_component(img) for img in tqdm(opened)]"
    ]
   },
   {
