--- a/src/notebooks/rabia_analysis.ipynb
+++ b/src/notebooks/rabia_analysis.ipynb
@@ -275,6 +275,30 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "83239cd9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.ndimage import binary_fill_holes\n",
+    "\n",
+    "filled = [binary_fill_holes(i, structure=np.ones((3, 3))) for i in tqdm(single_obj)]\n",
+    "if plot:\n",
+    "    plot_imgs(filled, **plot_kw)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ddad2710",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filled[0].shape"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "eb5796e8",
    "metadata": {},
