fix naive segment implementation and nb for saving masks

--- a/src/notebooks/segmentation.ipynb
+++ b/src/notebooks/segmentation.ipynb
@@ -49,6 +49,64 @@
     "    names += name\n",
     "    images += img"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "86444ff3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "out_dir = pathlib.Path(\"segmentation_stuff\")\n",
+    "\n",
+    "overlaid_dir = out_dir / \"overlaid\"\n",
+    "mask_dir = out_dir / \"masks\"\n",
+    "img_dir = out_dir / \"imgs\"\n",
+    "\n",
+    "for d in overlaid_dir, mask_dir, img_dir:\n",
+    "    d.mkdir(exist_ok=True, parents=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a5a6367b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "Build our training set by first using classical CV to perform segmentation\n",
+    "\"\"\"\n",
+    "\n",
+    "import tifffile\n",
+    "from matplotlib import colors\n",
+    "import matplotlib.pyplot as plt\n",
+    "from scale_morphology.scales import segmentation\n",
+    "\n",
+    "\n",
+    "def clear2black_cmap() -> colors.Colormap:\n",
+    "    \"\"\"\n",
+    "    Colormap that varies from clear to black\n",
+    "    \"\"\"\n",
+    "    c_white = colors.colorConverter.to_rgba(\"white\", alpha=0)\n",
+    "    c_black = colors.colorConverter.to_rgba(\"black\", alpha=1)\n",
+    "    return colors.ListedColormap([c_white, c_black], \"clear2black\")\n",
+    "\n",
+    "\n",
+    "cmap = clear2black_cmap()\n",
+    "for name, img in zip(tqdm(names), images):\n",
+    "    mask = segmentation.classical_segmentation(img)\n",
+    "\n",
+    "    tifffile.imwrite(mask_dir / (name + \".tif\"), mask)\n",
+    "    tifffile.imwrite(img_dir / (name + \".tif\"), img)\n",
+    "\n",
+    "    fig, axis = plt.subplots(figsize=(5, 5))\n",
+    "    axis.imshow(img)\n",
+    "    axis.imshow(mask, cmap=cmap, alpha=0.5)\n",
+    "    axis.set_axis_off()\n",
+    "    fig.savefig(overlaid_dir / (name + \".png\"))\n",
+    "    plt.close(fig)"
+   ]
   }
  ],
  "metadata": {
