add napari and use it to view stuff

--- a/src/notebooks/segmentation.ipynb
+++ b/src/notebooks/segmentation.ipynb
@@ -95,9 +95,12 @@
     "\n",
     "cmap = clear2black_cmap()\n",
     "for name, img in zip(tqdm(names), images):\n",
+    "    mask_path = mask_dir / (name + \".tif\")\n",
+    "    if mask_path.exists():\n",
+    "        continue\n",
     "    mask = segmentation.classical_segmentation(img)\n",
     "\n",
-    "    tifffile.imwrite(mask_dir / (name + \".tif\"), mask)\n",
+    "    tifffile.imwrite(mask_path, mask)\n",
     "    tifffile.imwrite(img_dir / (name + \".tif\"), img)\n",
     "\n",
     "    fig, axis = plt.subplots(figsize=(5, 5))\n",
@@ -106,6 +109,62 @@
     "    axis.set_axis_off()\n",
     "    fig.savefig(overlaid_dir / (name + \".png\"))\n",
     "    plt.close(fig)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "869a2353",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "Tidy the masks in napari\n",
+    "\"\"\"\n",
+    "\n",
+    "import napari\n",
+    "import numpy as np\n",
+    "import tifffile\n",
+    "from tqdm.notebook import tqdm\n",
+    "\n",
+    "cleaned_dir = out_dir / \"cleaned_masks\"\n",
+    "cleaned_dir.mkdir(exist_ok=True)\n",
+    "\n",
+    "mask_paths = list(mask_dir.glob(\"*.tif\"))\n",
+    "for mask_path in tqdm(mask_paths):\n",
+    "    name = mask_path.name\n",
+    "\n",
+    "    img_path = img_dir / name\n",
+    "    out_path = cleaned_dir / name\n",
+    "\n",
+    "    im = tifffile.imread(img_path)\n",
+    "    mask = tifffile.imread(mask_path).astype(np.uint8)\n",
+    "\n",
+    "    viewer = napari.Viewer()\n",
+    "    viewer.add_image(im, name=f\"image:{name}\")\n",
+    "\n",
+    "    labels = viewer.add_labels(mask, name=f\"mask:{name}\", opacity=0.5)\n",
+    "    labels.selected_label = 1\n",
+    "\n",
+    "    state = {\"saved\": False, \"skip\": False}\n",
+    "\n",
+    "    @viewer.bind_key(\"s\")\n",
+    "    def _save(_):\n",
+    "        tifffile.imwrite(out_path, (labels.data > 0).astype(np.uint8) * 255)\n",
+    "        state[\"saved\"] = True\n",
+    "        print(f\"saved {out_path}\")\n",
+    "\n",
+    "    @viewer.bind_key(\"x\")\n",
+    "    def _skip(_):\n",
+    "        state[\"skip\"] = True\n",
+    "        print(f\"Skip {out_path}\")\n",
+    "\n",
+    "    napari.run()\n",
+    "    if not state[\"skip\"] and not state[\"saved\"]:\n",
+    "        tifffile.imwrite(out_path, (labels.data > 0).astype(np.uint8) * 255)\n",
+    "        print(f\"Autosaved {out_path}\")\n",
+    "    else:\n",
+    "        print(\"skipped saving\")"
    ]
   }
  ],
