--- a/src/notebooks/rabia_analysis.ipynb
+++ b/src/notebooks/rabia_analysis.ipynb
@@ -120,6 +120,22 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1ddf3ef8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "So I can continue with the analysis while some stuff downloads, let's pretend that these are the finished masks...\n",
+    "\"\"\"\n",
+    "import tifffile\n",
+    "mask_dir = pathlib.Path(\"segmentation_stuff/masks\")\n",
+    "\n",
+    "masks = [tifffile.imread(path) for path in tqdm(list(mask_dir.glob(\"*.tif\")))]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "eb5796e8",
    "metadata": {},
