hacky dashboard df

--- a/src/notebooks/rabia_analysis.ipynb
+++ b/src/notebooks/rabia_analysis.ipynb
@@ -129,6 +129,7 @@
     "\"\"\"\n",
     "So I can continue with the analysis while some stuff downloads, let's pretend that these are the finished masks...\n",
     "\"\"\"\n",
+    "import pathlib\n",
     "import tifffile\n",
     "mask_dir = pathlib.Path(\"segmentation_stuff/masks\")\n",
     "\n",
@@ -172,6 +173,120 @@
     "\\end{aligned}\n",
     "\n",
     "possibly up to some factors of $2\\pi$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "40641cfc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "\"\"\"\n",
+    "Perform EFA on the scales and plot the reconstruction\n",
+    "\"\"\"\n",
+    "import importlib\n",
+    "\n",
+    "import numpy as np\n",
+    "from tqdm.notebook import tqdm\n",
+    "from scipy.ndimage import binary_fill_holes\n",
+    "from scale_morphology.scales import efa, errors, segmentation\n",
+    "\n",
+    "n_edge_points = 200\n",
+    "order = 50\n",
+    "\n",
+    "coeffs = []\n",
+    "for scale in tqdm(masks):\n",
+    "    # Hack - lots of them are broken\n",
+    "    # This doesn't even work as a hack. oh well\n",
+    "    scale = segmentation._largest_connected_component(scale)\n",
+    "    scale = binary_fill_holes(scale, structure=np.ones((3, 3)))\n",
+    "    scale = (scale * 255).astype(np.uint8)\n",
+    "    try:\n",
+    "        coeffs.append(efa.coefficients(scale, n_edge_points, order))\n",
+    "    except errors.BadImgError as e:\n",
+    "        coeffs.append(np.ones((order, 4)) * np.nan)\n",
+    "        print(f\"\\nError processing scale: {e}. NaN coeffs\")\n",
+    "coeffs = np.stack(coeffs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2faacf7c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "good_indices = ~np.isnan(coeffs).any(axis=(1, 2))\n",
+    "\n",
+    "good_mask_names = np.array([path.name for path in tqdm(list(mask_dir.glob(\"*.tif\")))])[\n",
+    "    good_indices\n",
+    "]\n",
+    "good_coeffs = coeffs[good_indices]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b9c530ab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.decomposition import PCA\n",
+    "\n",
+    "images = np.array(masks)[good_indices]\n",
+    "flat_coeffs = good_coeffs.reshape((good_coeffs.shape[0], -1))\n",
+    "\n",
+    "pca = PCA(n_components=2)\n",
+    "transformed_coeffs = np.ascontiguousarray(pca.fit_transform(flat_coeffs))\n",
+    "\n",
+    "good_imgs = [\n",
+    "    tifffile.imread(f\"segmentation_stuff/masks/{pathlib.Path(p).name}\")\n",
+    "    for p in tqdm(good_mask_names)\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "45de6cce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scale_morphology.scales import dashboard\n",
+    "\n",
+    "embeddable_imgs = [\n",
+    "    dashboard.embeddable_image(i.astype(np.uint8) * 255) for i in tqdm(good_imgs)\n",
+    "]\n",
+    "\n",
+    "\n",
+    "colours = []\n",
+    "\n",
+    "\n",
+    "def _colour(name):\n",
+    "    name = name.lower()\n",
+    "    if \"hom\" in name:\n",
+    "        if \"ontogenetic\" in name:\n",
+    "            return 0\n",
+    "        return 1\n",
+    "    if \"ontogenetic\" in name:\n",
+    "        return 2\n",
+    "    return 3\n",
+    "\n",
+    "\n",
+    "for name in good_mask_names:\n",
+    "    colours.append(_colour(name))\n",
+    "\n",
+    "dashboard_df = pd.DataFrame(transformed_coeffs, columns=[\"x\", \"y\"])\n",
+    "dashboard_df[\"image\"] = embeddable_imgs\n",
+    "dashboard_df[\"colour\"] = colours\n",
+    "dashboard_df[\"name\"] = good_mask_names\n",
+    "\n",
+    "dashboard_df"
    ]
   },
   {
