--- a/src/notebooks/segmentation.ipynb
+++ b/src/notebooks/segmentation.ipynb
@@ -57,6 +57,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pathlib\n",
+    "\n",
     "out_dir = pathlib.Path(\"segmentation_stuff\")\n",
     "\n",
     "overlaid_dir = out_dir / \"overlaid\"\n",
@@ -118,59 +120,70 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"\n",
-    "Tidy the masks in napari\n",
-    "\"\"\"\n",
-    "\n",
     "import napari\n",
     "import numpy as np\n",
     "import tifffile\n",
-    "from tqdm.notebook import tqdm\n",
+    "from pathlib import Path\n",
     "\n",
-    "cleaned_dir = out_dir / \"cleaned_masks\"\n",
-    "cleaned_dir.mkdir(exist_ok=True)\n",
+    "mask_paths = sorted(mask_dir.glob(\"*.tif\"))\n",
+    "img_paths = {p.name: img_dir / p.name for p in mask_paths}\n",
     "\n",
-    "mask_paths = list(mask_dir.glob(\"*.tif\"))\n",
-    "for mask_path in tqdm(mask_paths):\n",
-    "    name = mask_path.name\n",
+    "state = {\"i\": 0, \"viewer\": None, \"labels\": None}\n",
     "\n",
-    "    img_path = img_dir / name\n",
-    "    out_path = cleaned_dir / name\n",
     "\n",
-    "    im = tifffile.imread(img_path)\n",
-    "    mask = tifffile.imread(mask_path).astype(np.uint8)\n",
+    "def load_index(i):\n",
+    "    name = mask_paths[i].name\n",
+    "    im = tifffile.imread(img_paths[name])\n",
+    "    mask = tifffile.imread(mask_paths[i]).astype(np.uint8)\n",
     "\n",
-    "    viewer = napari.Viewer()\n",
-    "    viewer.add_image(im, name=f\"image:{name}\")\n",
-    "\n",
-    "    labels = viewer.add_labels(mask, name=f\"mask:{name}\", opacity=0.5)\n",
-    "    labels.selected_label = 1\n",
-    "\n",
-    "    state = {\"saved\": False, \"skip\": False}\n",
-    "\n",
-    "    @viewer.bind_key(\"s\")\n",
-    "    def _save(_):\n",
-    "        tifffile.imwrite(out_path, (labels.data > 0).astype(np.uint8) * 255)\n",
-    "        state[\"saved\"] = True\n",
-    "        print(f\"saved {out_path}\")\n",
-    "\n",
-    "    @viewer.bind_key(\"x\")\n",
-    "    def _skip(_):\n",
-    "        state[\"skip\"] = True\n",
-    "        print(f\"Skip {out_path}\")\n",
-    "\n",
-    "    napari.run()\n",
-    "    if not state[\"skip\"] and not state[\"saved\"]:\n",
-    "        tifffile.imwrite(out_path, (labels.data > 0).astype(np.uint8) * 255)\n",
-    "        print(f\"Autosaved {out_path}\")\n",
+    "    if state[\"labels\"] is None:\n",
+    "        state[\"image\"] = viewer.add_image(im, name=\"image\")\n",
+    "        state[\"labels\"] = viewer.add_labels(mask, name=\"mask\", opacity=0.5)\n",
     "    else:\n",
-    "        print(\"skipped saving\")"
+    "        state[\"image\"].data = im\n",
+    "        state[\"labels\"].data = mask\n",
+    "    viewer.title = f\"{i+1}/{len(mask_paths)} : {name}\"\n",
+    "\n",
+    "\n",
+    "def save_current():\n",
+    "    name = mask_paths[state[\"i\"]].name\n",
+    "    out_path = out_dir / \"cleaned_masks\" / name\n",
+    "    tifffile.imwrite(out_path, (state[\"labels\"].data > 0).astype(np.uint8) * 255)\n",
+    "    print(f\"Saved {out_path}\")\n",
+    "\n",
+    "\n",
+    "viewer = napari.Viewer()\n",
+    "state[\"viewer\"] = viewer\n",
+    "\n",
+    "\n",
+    "@viewer.bind_key(\"s\")\n",
+    "def _save(v):\n",
+    "    save_current()\n",
+    "\n",
+    "\n",
+    "@viewer.bind_key(\"n\")\n",
+    "def _next(v):\n",
+    "    save_current()\n",
+    "    if state[\"i\"] < len(mask_paths) - 1:\n",
+    "        state[\"i\"] += 1\n",
+    "        load_index(state[\"i\"])\n",
+    "\n",
+    "\n",
+    "@viewer.bind_key(\"p\")\n",
+    "def _prev(v):\n",
+    "    save_current()\n",
+    "    if state[\"i\"] > 0:\n",
+    "        state[\"i\"] -= 1\n",
+    "        load_index(state[\"i\"])\n",
+    "\n",
+    "\n",
+    "load_index(0)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "scale-morphology (3.12.2)",
+   "display_name": "scale-morphology (3.12.8)",
    "language": "python",
    "name": "python3"
   },
@@ -184,7 +197,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
