incredibly dirty implementation of the dashboard

--- a/src/notebooks/rabia_analysis.ipynb
+++ b/src/notebooks/rabia_analysis.ipynb
@@ -279,7 +279,7 @@
     "\n",
     "\n",
     "for name in good_mask_names:\n",
-    "    colours.append(_colour(name))\n",
+    "    colours.append(str(_colour(name)))\n",
     "\n",
     "dashboard_df = pd.DataFrame(transformed_coeffs, columns=[\"x\", \"y\"])\n",
     "dashboard_df[\"image\"] = embeddable_imgs\n",
@@ -287,6 +287,85 @@
     "dashboard_df[\"name\"] = good_mask_names\n",
     "\n",
     "dashboard_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "418a4e8a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from bokeh.plotting import figure, save\n",
+    "from bokeh.models import ColumnDataSource, HoverTool, CategoricalColorMapper\n",
+    "from bokeh.resources import INLINE\n",
+    "from scipy.spatial import ConvexHull\n",
+    "\n",
+    "factors = np.unique(dashboard_df[\"colour\"])\n",
+    "mapper = CategoricalColorMapper(factors=factors, palette=f\"Category10_4\")\n",
+    "\n",
+    "datasource = ColumnDataSource(dashboard_df)\n",
+    "fig = figure(\n",
+    "    title=\"Test\", width=800, height=800, tools=\"pan, wheel_zoom, box_zoom, reset\"\n",
+    ")\n",
+    "\n",
+    "fig.add_tools(\n",
+    "    (\n",
+    "        HoverTool(\n",
+    "            tooltips=\"\"\"\n",
+    "<div>\n",
+    "    <div>\n",
+    "        <img src=\"@image\" style=\"float: left; margin: 5px 5px 5px 5px;\">\n",
+    "    </div>\n",
+    "    <div>\n",
+    "        <span style=\"font-size: 17px; font-weight: bold;\">@name</span>\n",
+    "    </div>\n",
+    "</div>\n",
+    "\"\"\"\n",
+    "        )\n",
+    "    )\n",
+    ")\n",
+    "\n",
+    "\n",
+    "fig.scatter(\n",
+    "    x=\"x\",\n",
+    "    y=\"y\",\n",
+    "    source=datasource,\n",
+    "    size=4,\n",
+    "    color={\"field\": \"colour\", \"transform\": mapper},\n",
+    "    legend_field=\"colour\",\n",
+    ")\n",
+    "\n",
+    "for i, colour_value in enumerate(np.unique(dashboard_df[\"colour\"])):\n",
+    "    group_points = dashboard_df[dashboard_df[\"colour\"] == colour_value][\n",
+    "        [\"x\", \"y\"]\n",
+    "    ].values\n",
+    "\n",
+    "    if len(group_points) >= 3:\n",
+    "        hull = ConvexHull(group_points)\n",
+    "\n",
+    "        vertices = group_points[hull.vertices]\n",
+    "\n",
+    "        # Close the polygon by adding the first point at the end\n",
+    "        vertices = np.vstack([vertices, vertices[0]])\n",
+    "\n",
+    "        hull_color = mapper.palette[i % len(mapper.palette)]\n",
+    "        fig.patch(\n",
+    "            x=vertices[:, 0],\n",
+    "            y=vertices[:, 1],\n",
+    "            alpha=0.2,\n",
+    "            line_color=hull_color,\n",
+    "            line_width=2,\n",
+    "            fill_color=hull_color,\n",
+    "        )\n",
+    "\n",
+    "filename = \"test_dashboard.html\"\n",
+    "save(\n",
+    "    fig,\n",
+    "    filename=filename,\n",
+    "    title=pathlib.Path(filename.replace(\".html\", \"\")).name,\n",
+    "    resources=INLINE,\n",
+    ")"
    ]
   },
   {
