--- a/src/notebooks/segmentation.ipynb
+++ b/src/notebooks/segmentation.ipynb
@@ -59,7 +59,7 @@
    "source": [
     "import pathlib\n",
     "\n",
-    "out_dir = pathlib.Path(\"segmentation_stuff\")\n",
+    "out_dir = pathlib.Path(\"segmentation_stuff2\")\n",
     "\n",
     "overlaid_dir = out_dir / \"overlaid\"\n",
     "mask_dir = out_dir / \"masks\"\n",
@@ -68,6 +68,66 @@
     "for d in overlaid_dir, mask_dir, img_dir:\n",
     "    d.mkdir(exist_ok=True, parents=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aae4463f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "Just do the segmentation\n",
+    "\"\"\"\n",
+    "\n",
+    "from multiprocessing import Pool, Manager\n",
+    "\n",
+    "import tifffile\n",
+    "from scale_morphology.scales import segmentation\n",
+    "\n",
+    "\n",
+    "def _segment(img_and_name):\n",
+    "    img, name = img_and_name\n",
+    "    mask = segmentation.classical_segmentation(img)\n",
+    "    mask_path = mask_dir / (name + \".tif\")\n",
+    "    tifffile.imwrite(mask_path, mask)\n",
+    "    return mask\n",
+    "\n",
+    "\n",
+    "imgs_and_names = zip(images, names)\n",
+    "with Manager() as manager:\n",
+    "    masks = manager.list()\n",
+    "\n",
+    "    def worker(img_and_name):\n",
+    "        mask = _segment(img_and_name)\n",
+    "        masks.append(mask)\n",
+    "\n",
+    "    # Run parallel processing\n",
+    "    with Pool(processes=16) as pool:\n",
+    "        for _ in tqdm(pool.imap(worker, imgs_and_names), total=len(images)):\n",
+    "            pass\n",
+    "\n",
+    "# Convert to normal list if needed\n",
+    "masks = list(masks)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f7c62b1f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "masks = [tifffile.imread(f) for f in mask_dir.glob(\"*.tif\")]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a21829bd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -183,7 +243,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "scale-morphology (3.12.8)",
+   "display_name": "scale-morphology (3.12.2)",
    "language": "python",
    "name": "python3"
   },
@@ -197,7 +257,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
