try to do EFA with the smoothed mask - hasntquite worked, not sure why...

--- a/src/notebooks/segmentation.ipynb
+++ b/src/notebooks/segmentation.ipynb
@@ -118,7 +118,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "masks = [tifffile.imread(f) for f in mask_dir.glob(\"*.tif\")]"
+    "masks = [tifffile.imread(f) for f in mask_dir.glob(\"*.tif\")]\n",
+    "old_masks = [\n",
+    "    tifffile.imread(f)\n",
+    "    for f in (pathlib.Path(\"segmentation_stuff\") / \"masks\").glob(\"*.tif\")\n",
+    "]"
    ]
   },
   {
@@ -127,7 +131,48 @@
    "id": "a21829bd",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\"\"\"\n",
+    "Now try EFA again - it should work on the new masks\n",
+    "\"\"\"\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "from scale_morphology.scales import efa, errors\n",
+    "\n",
+    "from scipy.ndimage import binary_fill_holes\n",
+    "\n",
+    "\n",
+    "def coeffs(imgs):\n",
+    "    n_points = 200\n",
+    "    n_harmonics = 50\n",
+    "\n",
+    "    coeffs = []\n",
+    "    for scale in tqdm(imgs):\n",
+    "        scale = binary_fill_holes(scale)\n",
+    "        try:\n",
+    "            coeffs.append(efa.coefficients(scale, n_points, n_harmonics))\n",
+    "        except errors.BadImgError as e:\n",
+    "            coeffs.append(np.ones((n_harmonics, 4)) * np.nan)\n",
+    "            print(\"!\", end=\"\")\n",
+    "\n",
+    "    return np.stack(coeffs)\n",
+    "\n",
+    "\n",
+    "old_coeffs = coeffs(old_masks)\n",
+    "new_coeffs = coeffs(masks)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "92977b68",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.isnan(old_coeffs).any(axis=(1, 2)).sum()\n",
+    "np.isnan(new_coeffs).any(axis=(1, 2)).sum()"
+   ]
   },
   {
    "cell_type": "code",
