fix it - needed to convert to uint8

--- a/src/notebooks/segmentation.ipynb
+++ b/src/notebooks/segmentation.ipynb
@@ -118,9 +118,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "masks = [tifffile.imread(f) for f in mask_dir.glob(\"*.tif\")]\n",
+    "masks = [255 * tifffile.imread(f).astype(np.uint8) for f in mask_dir.glob(\"*.tif\")]\n",
     "old_masks = [\n",
-    "    tifffile.imread(f)\n",
+    "    255 * tifffile.imread(f).astype(np.uint8)\n",
     "    for f in (pathlib.Path(\"segmentation_stuff\") / \"masks\").glob(\"*.tif\")\n",
     "]"
    ]
@@ -149,7 +149,6 @@
     "\n",
     "    coeffs = []\n",
     "    for scale in tqdm(imgs):\n",
-    "        scale = binary_fill_holes(scale)\n",
     "        try:\n",
     "            coeffs.append(efa.coefficients(scale, n_points, n_harmonics))\n",
     "        except errors.BadImgError as e:\n",
@@ -170,8 +169,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.isnan(old_coeffs).any(axis=(1, 2)).sum()\n",
-    "np.isnan(new_coeffs).any(axis=(1, 2)).sum()"
+    "np.isnan(old_coeffs).any(axis=(1, 2)).sum(), np.isnan(new_coeffs).any(axis=(1, 2)).sum()"
    ]
   },
   {
